--- a/backend/EmployeeService/EmployeeService/appsettings.json
+++ b/backend/EmployeeService/EmployeeService/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DbConnection": "Server=127.0.0.1;Port=5432;Database=paw_emp;User Id=paw_emp;Password=paw_emp"
+  },
   "AllowedHosts": "*"
 }
