--- a/backend/Kubernetes/postgres-nodeport-customer-srv.yaml
+++ b/backend/Kubernetes/postgres-nodeport-customer-srv.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres-nodeport-service-srv
+  name: postgres-nodeport-customer-srv
 spec:
   type: NodePort
   selector:
-    app: postgres
+    app: postgres-customer
   ports:
-    - name: postgres
+    - name: postgres-customer
       protocol: TCP
       port: 5432
       targetPort: 5432
