Updating production setting and batch-build files

--- a/backend/CustomerService/CustomerService/appsettings.Production.json
+++ b/backend/CustomerService/CustomerService/appsettings.Production.json
@@ -5,5 +5,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Data": {
+    "CommandApiConnectionPod": {
+      "ConnectionString": "Server=postgres-customer-clusterip-srv;Port=5432;Database=customer;User Id=customer;Password=customer;"
+    }
   }
+
 }
