--- a/backend/EmployeeService/EmployeeService/appsettings.Production.json
+++ b/backend/EmployeeService/EmployeeService/appsettings.Production.json
@@ -8,7 +8,7 @@
   },
   "Data": {
     "CommandApiConnectionPod": {
-      "ConnectionString": "Server=postgres-clusterip-srv;Port=5432;Database=db0;User Id=mendix;Password=mendix;"
+      "ConnectionString": "Server=postgres-employee-clusterip-srv;Port=5432;Database=employee;User Id=employee;Password=employee;"
     }
   }
 }
