--- a/backend/Kubernetes/ingress-routing-srv.yaml
+++ b/backend/Kubernetes/ingress-routing-srv.yaml
@@ -22,6 +22,13 @@ spec:
                 name: customer-clusterip-srv
                 port:
                   number: 80
+          - path: /api/task
+            pathType: Prefix
+            backend:
+              service:
+                name: task-clusterip-srv
+                port:
+                  number: 80
                   
 
     
