--- a/backend/TaskService/TaskService/appsettings.Production.json
+++ b/backend/TaskService/TaskService/appsettings.Production.json
@@ -5,5 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Data": {
+    "CommandApiConnectionPod": {
+      "ConnectionString": "Server=postgres-taskobj-clusterip-srv;Port=5432;Database=taskobj;User Id=taskobj;Password=taskobj;"
+    }
   }
 }
