--- a/backend/EmployeeService/EmployeeService/appsettings.Production.json
+++ b/backend/EmployeeService/EmployeeService/appsettings.Production.json
@@ -10,5 +10,8 @@
     "CommandApiConnectionPod": {
       "ConnectionString": "Server=postgres-employee-clusterip-srv;Port=5432;Database=employee;User Id=employee;Password=employee;"
     }
-  }
+  },
+  "RabbitMQHost": "rabbitmq-clusterip-srv",
+  "RabbitMQPort": "5672"
+
 }
