--- a/backend/CalendarService/CalendarService/appsettings.json
+++ b/backend/CalendarService/CalendarService/appsettings.json
@@ -6,6 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "RabbitMQHost": "localhost",
-  "RabbitMQPort": "5672"
+  "AllowedHosts": "*"
 }
