--- a/backend/Kubernetes/postgres-nodeport-customer-srv.yaml
+++ b/backend/Kubernetes/postgres-nodeport-customer-srv.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app: postgres-customer
+    app: postgres-db-customer
   ports:
     - name: postgres-customer
       protocol: TCP
