--- a/backend/CalendarService/CalendarService/CalendarService.csproj
+++ b/backend/CalendarService/CalendarService/CalendarService.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="AsyncDataService\MessageBusClient.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="AsyncDataService\MessageBusClient.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
     <PackageReference Include="RabbitMQ.Client" Version="5.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
