--- a/backend/EmployeeService/EmployeeService/appsettings.Production.json
+++ b/backend/EmployeeService/EmployeeService/appsettings.Production.json
@@ -12,6 +12,7 @@
     }
   },
   "RabbitMQHost": "rabbitmq-clusterip-srv",
-  "RabbitMQPort": "5672"
+  "RabbitMQPort": "5672",
+  "RabbitMQExchange": "trigger"
 
 }
