Updated solution to work with RabbitMQ - accepting requsts from CalenderService and return a list of employees

--- a/backend/CalendarService/CalendarService/appsettings.Development.json
+++ b/backend/CalendarService/CalendarService/appsettings.Development.json
@@ -7,5 +7,15 @@
     }
   },
   "RabbitMQHost": "localhost",
-  "RabbitMQPort": "5672"
+  "RabbitMQPort": "5672",
+  "RabbitMQExchange": "calendar",
+  "RabbitMQQueueEmployeeOutgoing": "employee_calendar",
+  "RabbitMQQueueEmployeeIncomming": "calendar_employee",
+  "RabbitMQQueueTaskOutgoing": "task_calendar",
+  "RabbitMQQueueTaskIncomming": "calendar_task",
+  "RabbitMQRoutingKeyEmployeeOutgoing": "dk.paw.calendar.employees",
+  "RabbitMQRoutingKeyEmployeeIncomming": "dk.paw.employee.calendar",
+  "RabbitMQRoutingKeyTaskOutgoing": "dk.paw.calendar.tasks",
+  "RabbitMQRoutingKeyTaskIncomming": "dk.paw.tasks.calendar"
+
 }
