--- a/backend/EmployeeService/EmployeeService/appsettings.Development.json
+++ b/backend/EmployeeService/EmployeeService/appsettings.Development.json
@@ -8,5 +8,9 @@
   },
   "RabbitMQHost": "localhost",
   "RabbitMQPort": "5672",
-  "RabbitMQExchange": "trigger"
+  "RabbitMQExchange": "calendar",
+  "RabbitMQQueueCalendarIncomming": "employee_calendar",
+  "RabbitMQQueueCalendarOutgoing": "calendar_employee",
+  "RabbitMQRoutingKeyCalendarIncomming": "dk.paw.employees",
+  "RabbitMQRoutingKeyCalendarOutgoing": "dk.paw.calendar.employee"
 }
