--- a/backend/EmployeeService/EmployeeService/appsettings.Production.json
+++ b/backend/EmployeeService/EmployeeService/appsettings.Production.json
@@ -13,6 +13,9 @@
   },
   "RabbitMQHost": "rabbitmq-clusterip-srv",
   "RabbitMQPort": "5672",
-  "RabbitMQExchange": "trigger"
-
+  "RabbitMQExchange": "employee",
+  "RabbitMQQueueCalendarIncomming": "employee_calendar",
+  "RabbitMQQueueCalendarOutgoing": "calendar_employee",
+  "RabbitMQRoutingKeyCalendarIncomming": "dk.paw.employees",
+  "RabbitMQRoutingKeyCalendarOutgoing": "dk.paw.calendar.employee"
 }
