Updates to Yaml and Angular
Mainly yaml updates and a dropdown in angular

--- a/backend/Kubernetes/ingress-routing-srv.yaml
+++ b/backend/Kubernetes/ingress-routing-srv.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   ingressClassName: nginx   
   rules:
-    - host: acme.com
+    - host: paw.dk
       http:
         paths:
           - path: /api/employee
