--- a/backend/Kubernetes/postgres-db-deploy-employee.yaml
+++ b/backend/Kubernetes/postgres-db-deploy-employee.yaml
@@ -1,19 +1,20 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
-  name: postgres-employee
+  name: postgres-db-employee
 spec:
+  serviceName: postgres-employee-clusterip-srv
   replicas: 1
   selector:
     matchLabels:
-      app: postgres-employee
+      app: postgres-db-employee
   template:
     metadata:
       labels:
-        app: postgres-employee
+        app: postgres-db-employee
     spec:
       containers:
-        - name: postgres-employee
+        - name: postgres-db-employee
           image: postgres:10.1
           ports:
             - containerPort: 5432
@@ -25,12 +26,13 @@ spec:
             - name: POSTGRES_PASSWORD
               value: employee
             - name: PGDATA
-              value: /var/lib/postgresql/data/customer
+              value: /var/lib/postgresql/data/employee
           volumeMounts:
-            - mountPath: /var/lib/postgresql/data
-              name: postgres-employee-pv-claim
+            - name: postgres-employee-pv-storage
+              mountPath: /var/lib/postgresql/data
+              
       volumes:
-      - name: postgres-employee-pv-claim
+      - name: postgres-employee-pv-storage
         persistentVolumeClaim:
           claimName: postgres-employee-pv-claim
 ---
@@ -41,9 +43,9 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    app: postgres-employee
+    app: postgres-db-employee
   ports:
-  - name: postgres-employee
+  - name: postgres-db-employee
     protocol: TCP
     port: 5432
     targetPort: 5432 
