--- a/backend/Kubernetes/postgres-db-deploy-customer.yaml
+++ b/backend/Kubernetes/postgres-db-deploy-customer.yaml
@@ -1,17 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: postgres-customer-clusterip-srv
-spec:
-  type: ClusterIP
-  selector:
-    app: postgres-customer
-  ports:
-  - name: postgres-customer
-    protocol: TCP
-    port: 5432
-    targetPort: 5432 
----
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -48,4 +34,17 @@ spec:
       - name: postgres-customer-pv-storage
         persistentVolumeClaim:
           claimName: postgres-customer-pv-claim
-
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: postgres-customer-clusterip-srv
+spec:
+  type: ClusterIP
+  selector:
+    app: postgres-db-customer
+  ports:
+  - name: postgres-db-customer
+    protocol: TCP
+    port: 5432
+    targetPort: 5432 
