--- a/frontend/paw/package.json
+++ b/frontend/paw/package.json
@@ -21,6 +21,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
+    "jose": "^4.8.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
