Updating existing services and added taskservice

--- a/backend/CustomerService/CustomerService/appsettings.json
+++ b/backend/CustomerService/CustomerService/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Key": "165b6Ec7da304b22D91bbfe2aa!8f1e5d722caEdd59601595fd3A2e5f54ed314",
+    "Audience": "paw.dk",
+    "Issuer": "http://paw.dk"
+  }
+
 }
