--- a/backend/EmployeeService/EmployeeService/appsettings.json
+++ b/backend/EmployeeService/EmployeeService/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     "DbConnection": "Server=127.0.0.1;Port=5432;Database=paw_emp;User Id=paw_emp;Password=paw_emp"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Key": "165b6Ec7da304b22D91bbfe2aa!8f1e5d722caEdd59601595fd3A2e5f54ed314",
+    "Audience": "paw.dk",
+    "Issuer": "http://paw.dk"
+  }
 }
