--- a/frontend/paw/package.json
+++ b/frontend/paw/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
