Update to Employee, Task and Calendar

--- a/backend/CalendarService/CalendarService/appsettings.Development.json
+++ b/backend/CalendarService/CalendarService/appsettings.Development.json
@@ -13,9 +13,9 @@
   "RabbitMQQueueEmployeeIncomming": "calendar_employee",
   "RabbitMQQueueTaskOutgoing": "task_calendar",
   "RabbitMQQueueTaskIncomming": "calendar_task",
-  "RabbitMQRoutingKeyEmployeeOutgoing": "dk.paw.calendar.employees",
-  "RabbitMQRoutingKeyEmployeeIncomming": "dk.paw.employee.calendar",
-  "RabbitMQRoutingKeyTaskOutgoing": "dk.paw.calendar.tasks",
-  "RabbitMQRoutingKeyTaskIncomming": "dk.paw.tasks.calendar"
+  "RabbitMQRoutingKeyEmployeeOutgoing": "dk.paw.employees",
+  "RabbitMQRoutingKeyEmployeeIncomming": "dk.paw.calendar.employee",
+  "RabbitMQRoutingKeyTaskOutgoing": "dk.paw.task",
+  "RabbitMQRoutingKeyTaskIncomming": "dk.paw.calendar.task"
 
 }
