--- a/backend/EmployeeService/EmployeeService/appsettings.Development.json
+++ b/backend/EmployeeService/EmployeeService/appsettings.Development.json
@@ -8,7 +8,7 @@
   },
   "RabbitMQHost": "localhost",
   "RabbitMQPort": "5672",
-  "RabbitMQExchange": "calendar",
+  "RabbitMQExchange": "employee",
   "RabbitMQQueueCalendarIncomming": "employee_calendar",
   "RabbitMQQueueCalendarOutgoing": "calendar_employee",
   "RabbitMQRoutingKeyCalendarIncomming": "dk.paw.employees",
