--- a/backend/TaskService/TaskService/appsettings.Development.json
+++ b/backend/TaskService/TaskService/appsettings.Development.json
@@ -7,5 +7,11 @@
     }
   },
   "RabbitMQHost": "localhost",
-  "RabbitMQPort": "5672"
+  "RabbitMQPort": "5672",
+  "RabbitMQExchange": "task",
+  "RabbitMQQueueCalendarIncomming": "task_calendar",
+  "RabbitMQQueueCalendarOutgoing": "calendar_task",
+  "RabbitMQRoutingKeyCalendarIncomming": "dk.paw.task",
+  "RabbitMQRoutingKeyCalendarOutgoing": "dk.paw.calendar.task"
+
 }
