--- a/backend/TaskService/TaskService/appsettings.Production.json
+++ b/backend/TaskService/TaskService/appsettings.Production.json
@@ -12,5 +12,10 @@
     }
   },
   "RabbitMQHost": "rabbitmq-clusterip-srv",
-  "RabbitMQPort": "5672"
+  "RabbitMQPort": "5672",
+  "RabbitMQExchange": "task",
+  "RabbitMQQueueCalendarIncomming": "task_calendar",
+  "RabbitMQQueueCalendarOutgoing": "calendar_task",
+  "RabbitMQRoutingKeyCalendarIncomming": "dk.paw.task",
+  "RabbitMQRoutingKeyCalendarOutgoing": "dk.paw.calendar.task"
 }
