--- a/frontend/angular/package.json
+++ b/frontend/angular/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^12.0.1",
+    "@popperjs/core": "^2.11.5",
+    "@types/popper.js": "^1.11.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
@@ -31,6 +34,7 @@
     "@angular-devkit/build-angular": "~13.2.5",
     "@angular/cli": "~13.2.5",
     "@angular/compiler-cli": "~13.2.0",
+    "@angular/localize": "^13.2.7",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
