RabbitMQ working between CalenderService and TaskService

--- a/backend/TaskService/TaskService/appsettings.Production.json
+++ b/backend/TaskService/TaskService/appsettings.Production.json
@@ -17,5 +17,6 @@
   "RabbitMQQueueCalendarIncomming": "task_calendar",
   "RabbitMQQueueCalendarOutgoing": "calendar_task",
   "RabbitMQRoutingKeyCalendarIncomming": "dk.paw.task",
-  "RabbitMQRoutingKeyCalendarOutgoing": "dk.paw.calendar.task"
+  "RabbitMQRoutingKeyCalendarOutgoing": "dk.paw.calendar.task",
+  "CalenderSearchNrOfDays": "7"
 }
