--- a/backend/TaskService/TaskService/appsettings.Development.json
+++ b/backend/TaskService/TaskService/appsettings.Development.json
@@ -12,6 +12,8 @@
   "RabbitMQQueueCalendarIncomming": "task_calendar",
   "RabbitMQQueueCalendarOutgoing": "calendar_task",
   "RabbitMQRoutingKeyCalendarIncomming": "dk.paw.task",
-  "RabbitMQRoutingKeyCalendarOutgoing": "dk.paw.calendar.task"
+  "RabbitMQRoutingKeyCalendarOutgoing": "dk.paw.calendar.task",
+  "CalenderSearchNrOfDays": "30"
+
 
 }
