Last minute changes

--- a/backend/CalendarService/CalendarService/appsettings.Production.json
+++ b/backend/CalendarService/CalendarService/appsettings.Production.json
@@ -16,5 +16,6 @@
   "RabbitMQRoutingKeyEmployeeOutgoing": "dk.paw.employees",
   "RabbitMQRoutingKeyEmployeeIncomming": "dk.paw.calendar.employee",
   "RabbitMQRoutingKeyTaskOutgoing": "dk.paw.task",
-  "RabbitMQRoutingKeyTaskIncomming": "dk.paw.calendar.task"
+  "RabbitMQRoutingKeyTaskIncomming": "dk.paw.calendar.task",
+  "CalenderSearchNrOfDays": "7"
 }
