--- a/backend/CalendarService/CalendarService/appsettings.Production.json
+++ b/backend/CalendarService/CalendarService/appsettings.Production.json
@@ -6,6 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Data": {
+    "CommandApiConnectionPod": {
+      "ConnectionString": "Server=postgres-calendar-clusterip-srv;Port=5432;Database=calendar;User Id=calendar;Password=calendar;"
+    }
+  },
   "RabbitMQHost": "rabbitmq-clusterip-srv",
   "RabbitMQPort": "5672",
   "RabbitMQExchange": "calendar",
