--- a/backend/Kubernetes/postgres-nodeport-timereg-srv.yaml
+++ b/backend/Kubernetes/postgres-nodeport-timereg-srv.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres-nodeport-task-srv
+  name: postgres-nodeport-timereg-srv
 spec:
   type: NodePort
   selector:
-    app: postgres-db-taskobj
+    app: postgres-db-timereg
   ports:
-    - name: postgres-db-taskobj
+    - name: postgres-timereg
       protocol: TCP
       port: 5432
       targetPort: 5432
